--- a/video-express/functions/demo/room.html
+++ b/video-express/functions/demo/room.html
@@ -31,7 +31,8 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="./style.css">
     <!-- Load Vonage Video Express -->
-    <script src="https://static.opentok.com/v0/js/multiparty-sdk.js"></script>        
+<!--    <script src="https://static.opentok.com/v0/js/multiparty-sdk.js"></script>-->
+    <script defer src="https://static.opentok.com/v1/js/video-express.js"></script>
     <!-- Fill in with values from the server -->
     <!-- <script type="text/javascript">
       const apiKey = '<%= apiKey %>';
@@ -45,7 +46,13 @@
     <header>
       <h1>Vonage Video Express x Firebase Extensions</h1>
       <img id="logo" src="https://cdn.glitch.com/eef7a53f-5c6f-4289-9b47-c44aed2efe72%2Fvideo-express-logo.png?v=1632163644740"/>
-    </header>    
+    </header>
+    <section id="config-input-container">
+        const firebaseConfig = {<br/>
+        <textarea name="textarea" id="config-input" rows="8" cols="60" placeholder="Enter Firebase config here."></textarea>
+        <br/>}
+        <br/><br/><button id="save-config">save</button>
+    </section>
     <section id="previewContainer">
       <div id="myPreviewVideo"></div>
       <div id="select-devices">
