--- a/demos/video-express/public/room.html
+++ b/demos/video-express/public/room.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A cool thing made with Glitch">
+    <meta name="description" content="Vonage Video Express x Firebase Extension demo">
     <title>Vonage Video Express x Firebase Extensions</title>
 
 
@@ -31,7 +31,8 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="./style.css">
     <!-- Load Vonage Video Express -->
-    <script src="https://static.opentok.com/v0/js/multiparty-sdk.js"></script>        
+<!--    <script src="https://static.opentok.com/v0/js/multiparty-sdk.js"></script>-->
+    <script defer src="https://static.opentok.com/v1/js/video-express.js"></script>
     <!-- Fill in with values from the server -->
     <!-- <script type="text/javascript">
       const apiKey = '<%= apiKey %>';
