--- a/demos/video-express/public/room.html
+++ b/demos/video-express/public/room.html
@@ -6,39 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Vonage Video Express x Firebase Extension demo">
     <title>Vonage Video Express x Firebase Extensions</title>
-
-
     <!-- update the version number as needed -->
     <script defer src="https://www.gstatic.com/firebasejs/9.8.1/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
-    <!-- <script defer src="/__/firebase/9.0.2/firebase-auth-compat.js"></script> -->
-    <!-- <script defer src="/__/firebase/9.0.2/firebase-database-compat.js"></script> -->
     <script defer src="https://www.gstatic.com/firebasejs/9.8.1/firebase-firestore-compat.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/9.8.1/firebase-functions-compat.js"></script>
-    <!-- <script defer src="/__/firebase/9.0.2/firebase-messaging-compat.js"></script> -->
-    <!-- <script defer src="/__/firebase/9.0.2/firebase-storage-compat.js"></script> -->
-    <!-- <script defer src="/__/firebase/9.0.2/firebase-analytics-compat.js"></script> -->
-    <!-- <script defer src="/__/firebase/9.0.2/firebase-remote-config-compat.js"></script> -->
-    <!-- <script defer src="/__/firebase/9.0.2/firebase-performance-compat.js"></script> -->
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <!-- <script defer src="/__/firebase/init.js?useEmulator=false"></script> -->
-
-
-    <!-- <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon"> -->
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="./style.css">
     <!-- Load Vonage Video Express -->
-<!--    <script src="https://static.opentok.com/v0/js/multiparty-sdk.js"></script>-->
     <script defer src="https://static.opentok.com/v1/js/video-express.js"></script>
     <!-- Fill in with values from the server -->
-    <!-- <script type="text/javascript">
-      const apiKey = '<%= apiKey %>';
-      const sessionId = '<%= sessionId %>';
-      const token = '<%= token %>';
-    </script> -->
     <!-- import the webpage's client-side javascript file -->
     <script type="module" src="./js/room.js" defer></script>
   </head>
@@ -46,7 +23,13 @@
     <header>
       <h1>Vonage Video Express x Firebase Extensions</h1>
       <img id="logo" src="https://cdn.glitch.com/eef7a53f-5c6f-4289-9b47-c44aed2efe72%2Fvideo-express-logo.png?v=1632163644740"/>
-    </header>    
+    </header>
+    <section id="config-input-container">
+      const firebaseConfig = {<br/>
+      <textarea name="textarea" id="config-input" rows="8" cols="60" placeholder="Enter Firebase config here."></textarea>
+      <br/>}
+      <br/><br/><button id="save-config">save</button>
+    </section>
     <section id="previewContainer">
       <div id="myPreviewVideo"></div>
       <div id="select-devices">
@@ -56,7 +39,7 @@
           </select><br/>
           <label for="video-source-select">Video Source:</label>
           <select id="video-source-select">
-          </select>          
+          </select>
         </div>
         <div>
           <button id="previewSelection" type="button">Preview Selection</button><br/>
@@ -69,7 +52,7 @@
       </button>
       <div id="permissionDenied">
         Please allow access to camera and microphone for demo to work <button id="requestAccess">try again</button>
-      </div>    
+      </div>
     </section>
     <section id="VEcontainer">
       <div id="roomContainer"></div>
@@ -106,7 +89,7 @@
           </button>
           <br/><button id="leaveButton">leave</button>
         </fieldset>
-        <div id="myScreenshare"></div>        
+        <div id="myScreenshare"></div>
       </div>
     </section>
     <footer>Made with the <a href="https://tokbox.com/developer/video-express/" target="_blank">Vonage Video Express</a>!</footer>
