--- a/demos/video-express/public/room.html
+++ b/demos/video-express/public/room.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <h1>Vonage Video Express x Firebase Extensions</h1>
-      <img id="logo" src="https://cdn.glitch.com/eef7a53f-5c6f-4289-9b47-c44aed2efe72%2Fvideo-express-logo.png?v=1632163644740"/>
+      <img id="logo" src="https://www.vonage.com/cdn-cgi/image/fit=scale-down,width=850,onerror=redirect/content/dam/vonage/us-en/resources/imagery/article-imagery/Video-Express_Blog-Header.png"/>
     </header>
     <section id="config-input-container">
       const firebaseConfig = {<br/>
